compiler/tests/success/pack.jazz
export
fn pack() -> reg u64 {
reg u64 r;

r = (64u) (8u1)[0, 0, 0, 0, 0, 1, 1, 1]; // 7

return r;
}
